<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/child_color"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/album_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/material_grey_300"
                android:contentDescription="@string/content_description_album"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp" >

            <TextView
                android:id="@+id/song_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/text_song"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/album_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_album"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/player_control"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_baseline_play_circle_outline_60"
                app:tint="@color/white"
                android:contentDescription="@string/content_description_play" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>